[package]
name = "subpipe"
version = "0.2.2"
edition = "2021"
authors = ["sheee"]
description = "A lightweight subscription converter for proxy protocols"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Encoding/Decoding
base64 = "0.21"
percent-encoding = "2.3"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL parsing
url = "2"
urlencoding = "2"

# Regex
regex = "1"

# Crypto (for proxy protocols)
aes = "0.8"
cipher = "0.4"
sha2 = "0.10"
hmac = "0.12"
blake3 = "1"

# Compression
flate2 = "1"

# Random
rand = "0.8"

# CLI
clap = { version = "4", features = ["derive", "cargo"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-musl]
inherits = "release"
target-feature = "+crt-static"
